--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,2 +1,8 @@
-/* For information on how to create your own theme, please see:
-http://ionicframework.com/docs/theming/ */
+ion-content {
+  --background: #ffffff !important;
+}
+
+ion-tab-bar {
+  --background: #ffffff !important;
+  --color: #003366; /* Optional: dark blue tab text/icon */
+}
